// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentItemEditor for an invalid item renders all errors messages 1`] = `
<div role="list" class="v-list theme--light" data-test="questionErrors">
  <div role="listitem">
    <div class="v-list__tile theme--light"><span class="red--text font-weight-medium">Question cannot be blank</span></div>
  </div>
</div>
`;

exports[`AssessmentItemEditor for an invalid item renders all errors messages 2`] = `
<div role="list" class="v-list theme--light" data-test="answersErrors">
  <div role="listitem">
    <div class="v-list__tile theme--light"><span class="red--text font-weight-medium">Choose a correct answer</span></div>
  </div>
</div>
`;

exports[`AssessmentItemEditor renders 1`] = `
<div>
  <div class="layout">
    <div class="flex xs7 lg5">
      <div role="combobox" class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-select__slot"><label aria-hidden="true" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Question type</label>
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">Single selection</div><input aria-label="Question type" data-test="kindSelect" readonly="readonly" type="text" autocomplete="on" aria-readonly="false">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon material-icons theme--light">arrow_drop_down</i></div>
              </div>
            </div>
            <div class="v-menu">
              <div class="v-menu__content theme--light " style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;">
                <div class="v-select-list v-card theme--light">
                  <div role="list" class="v-list theme--light">
                    <div role="listitem" class="primary--text"><a class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text">
                        <div class="v-list__tile__content">
                          <div class="v-list__tile__title">Single selection</div>
                        </div>
                      </a></div>
                    <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
                        <div class="v-list__tile__content">
                          <div class="v-list__tile__title">Multiple selection</div>
                        </div>
                      </a></div>
                    <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
                        <div class="v-list__tile__content">
                          <div class="v-list__tile__title">Input question</div>
                        </div>
                      </a></div>
                    <div role="listitem"><a class="v-list__tile v-list__tile--link theme--light">
                        <div class="v-list__tile__content">
                          <div class="v-list__tile__title">True/False</div>
                        </div>
                      </a></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <div class="v-messages__wrapper"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="layout">
    <div class="flex">
      <!---->
      <div class="grey--text text--darken-2 mb-1">
        Question
      </div>
      <div data-test="questionText" class="pl-2 pr-2 pt-3 pb-3 question-text" name="fade"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">edit</i> <span>Exercise 2 - Question 2</span></div>
    </div>
  </div>
  <div class="layout mt-4">
    <div class="flex">
      <!---->
      <div>
        <div class="grey--text text--darken-1 mb-3">
          Answers
        </div>
        <!---->
        <div class="card-border-light">
          <div class="v-card v-card--flat v-sheet theme--light answer editable closed correct" data-test="answer">
            <div class="indicator correct"></div>
            <div class="v-card__text">
              <div class="layout align-top">
                <div class="flex">
                  <div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column theme--light">
                    <div class="v-input__control">
                      <div class="v-input__slot" style="height: auto;">
                        <div role="radiogroup" class="v-input--radio-group__input">
                          <div class="v-radio theme--light accent--text">
                            <div class="v-input--selection-controls__input"><input aria-label="Mayonnaise (I mean you can, but...)" aria-checked="true" role="radio" type="radio" name="v-radio-32" value="0" data-test="answerRadio">
                              <div class="v-input--selection-controls__ripple accent--text"></div><i aria-hidden="true" class="v-icon material-icons theme--light accent--text">radio_button_checked</i>
                            </div><label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;">Mayonnaise (I mean you can, but...)</label>
                          </div>
                        </div>
                      </div>
                      <div class="v-messages theme--light"><span name="message-transition" tag="div" class="v-messages__wrapper"></span></div>
                    </div>
                  </div>
                  <!---->
                  <!---->
                </div>
                <div class="flex">
                  <!---->
                </div>
                <div class="spacer"></div>
                <div class="flex">
                  <div class="layout justify-end toolbar" data-test="toolbar">
                    <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move up</span></div><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP">
                      <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div>
                    </button></span>
                  </div>
                  <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move down</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN">
                    <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div>
                  </button></span>
                </div>
                <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Delete</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
                  <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
                </button></span>
              </div>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="card-border-light">
    <div class="v-card v-card--flat v-sheet theme--light answer editable closed wrong" data-test="answer">
      <div class="indicator wrong"></div>
      <div class="v-card__text">
        <div class="layout align-top">
          <div class="flex">
            <div class="v-input v-input--selection-controls v-input--radio-group v-input--radio-group--column theme--light">
              <div class="v-input__control">
                <div class="v-input__slot" style="height: auto;">
                  <div role="radiogroup" class="v-input--radio-group__input">
                    <div class="v-radio theme--light">
                      <div class="v-input--selection-controls__input"><input aria-label="Peanut butter" aria-checked="false" role="radio" type="radio" name="v-radio-52" value="1" data-test="answerRadio">
                        <div class="v-input--selection-controls__ripple"></div><i aria-hidden="true" class="v-icon material-icons theme--light">radio_button_unchecked</i>
                      </div><label aria-hidden="true" class="v-label theme--light" style="left: 0px; position: relative;">Peanut butter</label>
                    </div>
                  </div>
                </div>
                <div class="v-messages theme--light"><span name="message-transition" tag="div" class="v-messages__wrapper"></span></div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
          <div class="flex">
            <!---->
          </div>
          <div class="spacer"></div>
          <div class="flex">
            <div class="layout justify-end toolbar" data-test="toolbar">
              <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move up</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP">
                <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_up</i></div>
              </button></span>
            </div>
            <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move down</span></div><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN">
              <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_down</i></div>
            </button></span>
          </div>
          <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Delete</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
            <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
          </button></span>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
</div>
</div> <button type="button" class="mt-3 ml-0 v-btn v-btn--flat theme--light primary--text" data-test="newAnswerBtn">
  <div class="v-btn__content">
    New answer
  </div>
</button></div>
<div class="mt-4">
  <div class="grey--text text--darken-1 mb-3">
    Hints
  </div>
  <!---->
  <div data-test="hint" class="card-border-light">
    <div class="v-card v-card--flat v-sheet theme--light hint closed">
      <div class="v-card__text">
        <div class="layout align-top">
          <div class="flex xs1">
            1
          </div>
          <div class="flex"><span name="fade">
                  It's not healthy
                </span></div>
          <div class="spacer"></div>
          <div class="flex">
            <div class="layout justify-end toolbar">
              <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move up</span></div><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP">
                <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_up</i></div>
              </button></span>
            </div>
            <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move down</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN">
              <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_down</i></div>
            </button></span>
          </div>
          <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Delete</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
            <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
          </button></span>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
</div>
</div>
<div data-test="hint" class="card-border-light">
  <div class="v-card v-card--flat v-sheet theme--light hint closed">
    <div class="v-card__text">
      <div class="layout align-top">
        <div class="flex xs1">
          2
        </div>
        <div class="flex"><span name="fade">
                  Tasty!
                </span></div>
        <div class="spacer"></div>
        <div class="flex">
          <div class="layout justify-end toolbar">
            <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move up</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_UP">
              <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">keyboard_arrow_up</i></div>
            </button></span>
          </div>
          <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Move down</span></div><button disabled="disabled" type="button" class="v-btn v-btn--disabled v-btn--icon theme--light" data-test="toolbarIcon-MOVE_ITEM_DOWN">
            <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--lighten-2">keyboard_arrow_down</i></div>
          </button></span>
        </div>
        <div class="flex toolbar-item"><span class="v-tooltip v-tooltip--top"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"> <span>Delete</span></div><button type="button" class="v-btn v-btn--icon theme--light" data-test="toolbarIcon-DELETE_ITEM">
          <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light grey--text text--darken-1">close</i></div>
        </button></span>
      </div>
      <!---->
    </div>
  </div>
</div>
</div>
</div>
</div> <button type="button" class="mt-3 ml-0 v-btn v-btn--flat theme--light primary--text" data-test="newHintBtn">
  <div class="v-btn__content">
    New hint
  </div>
</button></div>
</div>
</div>
</div>
`;
